custom fit plugin; disable other t2 plugins we don't need

--- a/installer/helm/chart/volcano/config/volcano-scheduler.conf
+++ b/installer/helm/chart/volcano/config/volcano-scheduler.conf
@@ -5,9 +5,10 @@ tiers:
   - name: gang
   - name: conformance
 - plugins:
-  - name: overcommit
-  - name: drf
-  - name: predicates
-  - name: proportion
-  - name: nodeorder
-  - name: binpack
+  - name: fit
+#   - name: proportion
+#   - name: overcommit
+#   - name: drf
+#   - name: predicates
+#   - name: nodeorder
+#   - name: binpack
