--- a/installer/helm/chart/volcano/config/volcano-scheduler.conf
+++ b/installer/helm/chart/volcano/config/volcano-scheduler.conf
@@ -2,13 +2,13 @@ actions: "enqueue, allocate, backfill"
 tiers:
 - plugins:
   - name: priority
-#  - name: gang
+  - name: gang
   - name: conformance
 - plugins:
   - name: fit
 #   - name: proportion
 #   - name: overcommit
 #   - name: drf
-#   - name: predicates
+  - name: predicates
 #   - name: nodeorder
 #   - name: binpack
