--- a/installer/helm/chart/volcano/templates/admission.yaml
+++ b/installer/helm/chart/volcano/templates/admission.yaml
@@ -1,8 +1,4 @@
 {{- if .Values.custom.admission_enable }}
-{{ $admission_affinity := or .Values.custom.admission_affinity .Values.custom.default_affinity }}
-{{ $admission_tolerations := or .Values.custom.admission_tolerations .Values.custom.default_tolerations }}
-{{ $admission_sc := or .Values.custom.admission_sc .Values.custom.default_sc }}
-{{ $admission_ns := or .Values.custom.admission_ns .Values.custom.default_ns }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -16,11 +12,17 @@ kind: ServiceAccount
 metadata:
   name: {{ .Release.Name }}-admission
   namespace: {{ .Release.Namespace }}
+  annotations:
+    "helm.sh/hook": pre-install,pre-upgrade
+    "helm.sh/hook-weight": "-5"
 ---
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: {{ .Release.Name }}-admission
+  annotations:
+    "helm.sh/hook": pre-install,pre-upgrade
+    "helm.sh/hook-weight": "-5"
 rules:
   - apiGroups: [""]
     resources: ["configmaps"]
@@ -53,6 +55,9 @@ kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: {{ .Release.Name }}-admission-role
+  annotations:
+    "helm.sh/hook": pre-install,pre-upgrade
+    "helm.sh/hook-weight": "-5"
 subjects:
   - kind: ServiceAccount
     name: {{ .Release.Name }}-admission
@@ -68,9 +73,6 @@ kind: Deployment
 metadata:
   labels:
     app: volcano-admission
-    {{- if .Values.custom.admission_labels }}
-    {{- toYaml .Values.custom.admission_labels | nindent 4 }}
-    {{- end }}
   name: {{ .Release.Name }}-admission
   namespace: {{ .Release.Namespace }}
 spec:
@@ -82,24 +84,7 @@ spec:
     metadata:
       labels:
         app: volcano-admission
-        {{- if .Values.custom.admission_podLabels }}
-        {{- toYaml .Values.custom.admission_podLabels | nindent 8 }}
-        {{- end }}
     spec:
-      {{- if $admission_tolerations }}
-      tolerations: {{- toYaml $admission_tolerations | nindent 8 }}
-      {{- end }}
-      {{- if $admission_ns }}
-      nodeSelector: {{- toYaml $admission_ns | nindent 8 }}
-      {{- end }}
-      {{- if $admission_affinity }}
-      affinity:
-          {{- toYaml $admission_affinity | nindent 8 }}
-      {{- end }}
-      {{- if $admission_sc }}
-      securityContext:
-          {{- toYaml $admission_sc | nindent 8 }}
-      {{- end }}
       serviceAccount: {{ .Release.Name }}-admission
       priorityClassName: system-cluster-critical
       {{- if .Values.basic.image_pull_secret }}
@@ -115,18 +100,13 @@ spec:
             - --admission-conf=/admission.local.config/configmap/{{base .Values.basic.admission_config_file}}
             - --webhook-namespace={{ .Release.Namespace }}
             - --webhook-service-name={{ .Release.Name }}-admission-service
-            - --enable-healthz=true
             - --logtostderr
             - --port={{.Values.basic.admission_port}}
             - -v=4
             - 2>&1
           image: {{.Values.basic.admission_image_name}}:{{.Values.basic.image_tag_version}}
-          imagePullPolicy: {{ .Values.basic.image_pull_policy }}
+          imagePullPolicy: IfNotPresent
           name: admission
-          {{- if .Values.custom.admission_resources }}
-          resources:
-          {{- toYaml .Values.custom.admission_resources | nindent 12 }}
-          {{- end }}
           volumeMounts:
             - mountPath: /admission.local.config/certificates
               name: admission-certs
@@ -167,27 +147,14 @@ metadata:
   namespace: {{ .Release.Namespace }}
   labels:
     app: volcano-admission-init
-    {{- if .Values.custom.admission_labels }}
-    {{- toYaml .Values.custom.admission_labels | nindent 4 }}
-    {{- end }}
+  annotations:
+    "helm.sh/hook": pre-install
+    "helm.sh/hook-weight": "0"
+    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
 spec:
   backoffLimit: 3
   template:
     spec:
-      {{- if $admission_tolerations }}
-      tolerations: {{- toYaml $admission_tolerations | nindent 8 }}
-      {{- end }}
-      {{- if $admission_ns }}
-      nodeSelector: {{- toYaml $admission_ns | nindent 8 }}
-      {{- end }}
-      {{- if $admission_affinity }}
-      affinity:
-        {{- toYaml $admission_affinity | nindent 8 }}
-      {{- end }}
-      {{- if $admission_sc }}
-      securityContext:
-        {{- toYaml $admission_sc | nindent 8 }}
-      {{- end }}
       serviceAccountName: {{ .Release.Name }}-admission
       priorityClassName: system-cluster-critical
       {{- if .Values.basic.image_pull_secret }}
@@ -197,12 +164,8 @@ spec:
       restartPolicy: Never
       containers:
         - name: main
-          {{- if .Values.custom.admission_resources }}
-          resources:
-          {{- toYaml .Values.custom.admission_resources | nindent 12 }}
-          {{- end }}
           image: {{.Values.basic.admission_image_name}}:{{.Values.basic.image_tag_version}}
-          imagePullPolicy: {{ .Values.basic.image_pull_policy }}
+          imagePullPolicy: IfNotPresent
           command: ["./gen-admission-secret.sh", "--service", "{{ .Release.Name }}-admission-service", "--namespace",
                     "{{ .Release.Namespace }}", "--secret", "{{.Values.basic.admission_secret_name}}"]
 {{- end }}
