--- a/installer/helm/chart/volcano/values.yaml
+++ b/installer/helm/chart/volcano/values.yaml
@@ -1,18 +1,18 @@
 basic:
-  controller_image_name: "volcanosh/vc-controller-manager"
-  scheduler_image_name: "volcanosh/vc-scheduler"
-  admission_image_name: "volcanosh/vc-webhook-manager"
+  image_tag_version: "latest"
+  controller_image_name: "public.ecr.aws/n9u9x7z1/volcano-controller-manager"
+  scheduler_image_name: "public.ecr.aws/n9u9x7z1/volcano-scheduler"
+  admission_image_name: "public.ecr.aws/n9u9x7z1/volcano-webhook-manager"
   admission_secret_name: "volcano-admission-secret"
   admission_config_file: "config/volcano-admission.conf"
   scheduler_config_file: "config/volcano-scheduler.conf"
   image_pull_secret: ""
   image_pull_policy: "Always"
-  image_tag_version: "latest"
   admission_port: 8443
 custom:
   metrics_enable: false
   admission_enable: true
-  admission_replicas: 1
+  admission_replicas: 2
   controller_enable: true
   controller_replicas: 1
   scheduler_enable: true
