--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -23,3 +23,5 @@ profiles:
           variant: AbbrevCommitSha
           ignoreChanges: true
       platforms: ["linux/amd64"]
+      local:
+        concurrency: 0
