Update volcano config

--- a/installer/helm/chart/volcano/config/volcano-scheduler.conf
+++ b/installer/helm/chart/volcano/config/volcano-scheduler.conf
@@ -6,10 +6,10 @@ tiers:
     enablePreemptable: false
   - name: conformance
 - plugins:
-  - name: fit
-#   - name: proportion
-#   - name: overcommit
-#   - name: drf
+  # - name: fit
+  # - name: proportion
+  # - name: overcommit
+  # - name: drf
   - name: predicates
-#   - name: nodeorder
-#   - name: binpack
+  # - name: nodeorder
+  # - name: binpack
