--- a/installer/helm/chart/volcano/config/volcano-scheduler.conf
+++ b/installer/helm/chart/volcano/config/volcano-scheduler.conf
@@ -7,6 +7,7 @@ tiers:
   - name: conformance
 - plugins:
   # - name: fit
+    # enablePreemptable: false
   # - name: proportion
   # - name: overcommit
   # - name: drf
