update scheduler conf

--- a/installer/helm/chart/volcano/config/volcano-scheduler.conf
+++ b/installer/helm/chart/volcano/config/volcano-scheduler.conf
@@ -7,8 +7,8 @@ tiers:
   - name: conformance
 - plugins:
   # - name: fit
-    # enablePreemptable: false
-  # - name: proportion
+  #   enablePreemptable: false
+  - name: proportion
   # - name: overcommit
   # - name: drf
   - name: predicates
