--- a/installer/helm/chart/volcano/values.yaml
+++ b/installer/helm/chart/volcano/values.yaml
@@ -1,8 +1,8 @@
 basic:
-  image_tag_version: "293354602"
-  controller_image_name: "public.ecr.aws/n9u9x7z1/volcano-controller-manager"
-  scheduler_image_name: "public.ecr.aws/n9u9x7z1/volcano-scheduler"
-  admission_image_name: "public.ecr.aws/n9u9x7z1/volcano-webhook-manager"
+  image_tag_version: "v1.8.1"
+  controller_image_name: "volcanosh/vc-controller-manager"
+  scheduler_image_name: "volcanosh/vc-scheduler"
+  admission_image_name: "volcanosh/vc-webhook-manager"
   admission_secret_name: "volcano-admission-secret"
   admission_config_file: "config/volcano-admission.conf"
   scheduler_config_file: "config/volcano-scheduler.conf"
