--- a/installer/helm/chart/volcano/config/volcano-scheduler.conf
+++ b/installer/helm/chart/volcano/config/volcano-scheduler.conf
@@ -2,8 +2,8 @@ actions: "enqueue, allocate, backfill"
 tiers:
 - plugins:
   - name: priority
-  - name: gang
-    enablePreemptable: false
+  # - name: gang
+  #   enablePreemptable: false
   - name: conformance
 - plugins:
   # - name: fit
