--- a/installer/helm/chart/volcano/values.yaml
+++ b/installer/helm/chart/volcano/values.yaml
@@ -1,5 +1,5 @@
 basic:
-  image_tag_version: "GIT_COMMIT"
+  image_tag_version: "88047815b"
   controller_image_name: "public.ecr.aws/n9u9x7z1/volcano-controller-manager"
   scheduler_image_name: "public.ecr.aws/n9u9x7z1/volcano-scheduler"
   admission_image_name: "public.ecr.aws/n9u9x7z1/volcano-webhook-manager"
