Disable certain plugins

--- a/installer/helm/chart/volcano/config/volcano-scheduler.conf
+++ b/installer/helm/chart/volcano/config/volcano-scheduler.conf
@@ -6,10 +6,10 @@ tiers:
     enablePreemptable: false
   - name: conformance
 - plugins:
-  - name: overcommit
-  - name: drf
-    enablePreemptable: false
-  - name: predicates
+  # - name: overcommit
+  # - name: drf
+  #   enablePreemptable: false
   - name: proportion
-  - name: nodeorder
+  - name: predicates
+  # - name: nodeorder
   - name: binpack
